--- a/.env
+++ b/.env
@@ -1,6 +1,13 @@
 SECRET_KEY=kiw_rinjani
 PORT=5000
 
+#database
+DB_HOST=containers-us-west-175.railway.app
+DB_USER=postgres
+DB_PASSWORD=9UarqEayyDoTz0l21G4e
+DB_NAME=railway
+DB_PORT=5661
+
 # midtrans
 SERVER_KEY=SB-Mid-server-C7mXE1EB8g_z0Sa_bgNuOJ3Q
 CLIENT_KEY=SB-Mid-client-iVnihIBD2DnLYT3f
